fix: modals z-index higher than ads

--- a/src/components/ui/Modal/Modal.module.scss
+++ b/src/components/ui/Modal/Modal.module.scss
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1000;
+  z-index: 10000000000; /* Higher than mediavine's adhesion */
   width: 100%;
   height: 100%;
   opacity: 0;
